// Vitest Snapshot v1

exports[`Tabs > Tabs banVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="36px"
>
  <t-space>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="normal"
      >
        常规型
      </t-radio-button>
      <t-radio-button
        value="card"
      >
        卡片型
      </t-radio-button>
    </t-radio-group>
  </t-space>
  <t-tabs
    theme="normal"
    value="first"
  >
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1的内容
      </p>
    </t-tab-panel>
    <t-tab-panel
      disabled="true"
      label="选项卡2"
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2的内容
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3的内容
      </p>
    </t-tab-panel>
  </t-tabs>
</t-space>
`;

exports[`Tabs > Tabs baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-tabs>
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1的内容，使用 t-tab-panel 渲染
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="second"
    >
      <p
        slot="panel"
        style="padding: 25px;"
      >
        选项卡2的内容，使用 t-tab-panel 渲染
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      panel="function () { [native code] }"
      value="third"
    />
  </t-tabs>
  <t-tabs
    list="[object Object],[object Object],[object Object]"
  />
</t-space>
`;

exports[`Tabs > Tabs combinationVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
  style="width: 100%;"
>
  <t-space>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="normal"
      >
        常规型
      </t-radio-button>
      <t-radio-button
        value="card"
      >
        卡片型
      </t-radio-button>
    </t-radio-group>
  </t-space>
  <t-tabs
    theme="normal"
  >
    <t-tab-panel
      label="选项卡1"
      value="0"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="1"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="2"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡4"
      value="3"
    >
      <p
        style="padding: 25px;"
      >
        选项卡4
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡5"
      value="4"
    >
      <p
        style="padding: 25px;"
      >
        选项卡5
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡6"
      value="5"
    >
      <p
        style="padding: 25px;"
      >
        选项卡6
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡7"
      value="6"
    >
      <p
        style="padding: 25px;"
      >
        选项卡7
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡8"
      value="7"
    >
      <p
        style="padding: 25px;"
      >
        选项卡8
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡9"
      value="8"
    >
      <p
        style="padding: 25px;"
      >
        选项卡9
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡10"
      value="9"
    >
      <p
        style="padding: 25px;"
      >
        选项卡10
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡11"
      value="10"
    >
      <p
        style="padding: 25px;"
      >
        选项卡11
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡12"
      value="11"
    >
      <p
        style="padding: 25px;"
      >
        选项卡12
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡13"
      value="12"
    >
      <p
        style="padding: 25px;"
      >
        选项卡13
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡14"
      value="13"
    >
      <p
        style="padding: 25px;"
      >
        选项卡14
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡15"
      value="14"
    >
      <p
        style="padding: 25px;"
      >
        选项卡15
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡16"
      value="15"
    >
      <p
        style="padding: 25px;"
      >
        选项卡16
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡17"
      value="16"
    >
      <p
        style="padding: 25px;"
      >
        选项卡17
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡18"
      value="17"
    >
      <p
        style="padding: 25px;"
      >
        选项卡18
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡19"
      value="18"
    >
      <p
        style="padding: 25px;"
      >
        选项卡19
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡20"
      value="19"
    >
      <p
        style="padding: 25px;"
      >
        选项卡20
      </p>
    </t-tab-panel>
  </t-tabs>
</t-space>
`;

exports[`Tabs > Tabs customVue demo works fine 1`] = `
<t-tabs
  addable="true"
  style="width: 100%;"
  theme="card"
  value="first"
>
  <t-tab-panel
    label="原有选项卡"
    removable="true"
    value="first"
  >
    <p
      style="padding: 25px;"
    >
      原有选项卡内容
    </p>
  </t-tab-panel>
  <t-tab-panel
    label="原有选项卡"
    removable="true"
    value="second"
  >
    <p
      style="padding: 25px;"
    >
      原有选项卡内容
    </p>
  </t-tab-panel>
</t-tabs>
`;

exports[`Tabs > Tabs iconVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-space>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="normal"
      >
        常规型
      </t-radio-button>
      <t-radio-button
        value="card"
      >
        卡片型
      </t-radio-button>
    </t-radio-group>
  </t-space>
  <t-tabs
    theme="normal"
    value="first"
  >
    <t-tab-panel
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        首页的内容
      </p>
    </t-tab-panel>
    <t-tab-panel
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        日程的内容
      </p>
    </t-tab-panel>
    <t-tab-panel
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        事项的内容
      </p>
    </t-tab-panel>
  </t-tabs>
</t-space>
`;

exports[`Tabs > Tabs operationVue demo works fine 1`] = `
<t-tabs
  addable="true"
  theme="card"
  value="first"
>
  <t-tab-panel
    label="原有选项卡"
    value="first"
  >
    <p
      style="padding: 25px;"
    >
      原有选项卡内容
    </p>
  </t-tab-panel>
  <t-tab-panel
    label="原有选项卡"
    removable="true"
    value="second"
  >
    <p
      style="padding: 25px;"
    >
      原有选项卡内容
    </p>
  </t-tab-panel>
</t-tabs>
`;

exports[`Tabs > Tabs positionVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-space>
    <t-radio-group
      variant="default-filled"
    >
      <t-radio-button
        value="top"
      >
        top
      </t-radio-button>
      <t-radio-button
        value="right"
      >
        right
      </t-radio-button>
      <t-radio-button
        value="bottom"
      >
        bottom
      </t-radio-button>
      <t-radio-button
        value="left"
      >
        left
      </t-radio-button>
    </t-radio-group>
  </t-space>
  <t-tabs
    placement="top"
    value="first"
  >
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3
      </p>
    </t-tab-panel>
  </t-tabs>
</t-space>
`;

exports[`Tabs > Tabs sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-tabs
    size="medium"
    value="first"
  >
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3
      </p>
    </t-tab-panel>
  </t-tabs>
  <t-tabs
    size="large"
    value="first"
  >
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3
      </p>
    </t-tab-panel>
  </t-tabs>
</t-space>
`;

exports[`Tabs > Tabs themeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-tabs
    value="first"
  >
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3
      </p>
    </t-tab-panel>
  </t-tabs>
  <t-tabs
    theme="card"
    value="first"
  >
    <t-tab-panel
      label="选项卡1"
      value="first"
    >
      <p
        style="padding: 25px;"
      >
        选项卡1
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡2"
      value="second"
    >
      <p
        style="padding: 25px;"
      >
        选项卡2
      </p>
    </t-tab-panel>
    <t-tab-panel
      label="选项卡3"
      value="third"
    >
      <p
        style="padding: 25px;"
      >
        选项卡3
      </p>
    </t-tab-panel>
  </t-tabs>
</t-space>
`;
